--- a/octopus survey results.RMD
+++ b/octopus survey results.RMD
@@ -172,6 +172,10 @@ res_ban_farming_adj = readRDS(here("results/res_farming_unadj.rds"))
 res_ban_sale_adj = readRDS(here("results/res_sale_unadj.rds"))
 res_ban_subsidies_adj = readRDS(here("results/res_subsidies_unadj.rds"))
 
+res_ban_farming_adj$Y = gsub("tr","",res_ban_farming_adj$Y)
+res_ban_sale_adj$Y = gsub("tr","",res_ban_sale_adj$Y)
+res_ban_subsidies_adj$Y = gsub("tr","",res_ban_subsidies_adj$Y)
+
 ggplot(res_ban_farming_adj, aes(x=Y, y=`Coef.`)) + geom_point() +
   geom_errorbar(aes(ymin=`2.5%`, ymax=`97.5%`), width=0.2) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
@@ -217,11 +221,16 @@ res_ban_farming_adj = readRDS(here("results/res_farming_secondary.rds"))
 res_ban_sale_adj = readRDS(here("results/res_sale_secondary.rds"))
 res_ban_subsidies_adj = readRDS(here("results/res_subsidies_secondary.rds"))
 
+res_ban_farming_adj$contrast = gsub(" \\(ref\\)","",res_ban_farming_adj$contrast)
+res_ban_sale_adj$contrast = gsub(" \\(ref\\)","",res_ban_sale_adj$contrast)
+res_ban_subsidies_adj$contrast = gsub(" \\(ref\\)","",res_ban_subsidies_adj$contrast)
+
+
 ggplot(res_ban_farming_adj, aes(x=contrast, y=`Coef.`)) + geom_point() +
   geom_errorbar(aes(ymin=`2.5%`, ymax=`97.5%`), width=0.2) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Farming Octopuses",
-       x="Message Condition",
+       x="Message Condition Contrast",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
@@ -230,7 +239,7 @@ ggplot(res_ban_sale_adj, aes(x=contrast, y=`Coef.`)) + geom_point() +
   geom_errorbar(aes(ymin=`2.5%`, ymax=`97.5%`), width=0.2) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Sale of Octopuses",
-       x="Message Condition",
+       x="Message Condition Contrast",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
@@ -239,7 +248,7 @@ ggplot(res_ban_subsidies_adj, aes(x=contrast, y=`Coef.`)) + geom_point() +
   geom_errorbar(aes(ymin=`2.5%`, ymax=`97.5%`), width=0.2) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Subsidies",
-       x="Message Condition",
+       x="Message Condition Contrast",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
@@ -250,35 +259,35 @@ ggplot(res_ban_subsidies_adj, aes(x=contrast, y=`Coef.`)) + geom_point() +
 
 ```{r}
 
-res_ban_farming_subgroup = readRDS(here("results/res_farming_subgroup.rds"))
-res_ban_sale_subgroup = readRDS(here("results/res_sale_subgroup.rds"))
-res_ban_subsidies_subgroup = readRDS(here("results/res_subsidies_subgroup.rds"))
+res_ban_farming_subgroup = readRDS(here("results/res_farming_subgroup.rds")) %>% rename(Message=tr)
+res_ban_sale_subgroup = readRDS(here("results/res_sale_subgroup.rds")) %>% rename(Message=tr)
+res_ban_subsidies_subgroup = readRDS(here("results/res_subsidies_subgroup.rds")) %>% rename(Message=tr)
 
-ggplot(res_ban_farming_subgroup, aes(x=Country, y=est, group=tr, color=tr)) + geom_point(position = position_dodge(0.5)) +
+ggplot(res_ban_farming_subgroup, aes(x=Country, y=est, group=Message, color=Message)) + geom_point(position = position_dodge(0.5)) +
   geom_errorbar(aes(ymin=est.lb, ymax=est.ub), width=0.2, position = position_dodge(0.5)) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Farming Octopuses",
-       x="Message Condition",
+       x="Country",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
 
-ggplot(res_ban_sale_subgroup, aes(x=Country, y=est, group=tr, color=tr)) + 
+ggplot(res_ban_sale_subgroup, aes(x=Country, y=est, group=Message, color=Message)) + 
   geom_point(position = position_dodge(0.5)) +
   geom_errorbar(aes(ymin=est.lb, ymax=est.ub), width=0.2, position = position_dodge(0.5)) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Sale of Octopuses",
-       x="Message Condition",
+       x="Country",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
 
-ggplot(res_ban_subsidies_subgroup, aes(x=Country, y=est, group=tr, color=tr)) + 
+ggplot(res_ban_subsidies_subgroup, aes(x=Country, y=est, group=Message, color=Message)) + 
     geom_point(position = position_dodge(0.5)) +
   geom_errorbar(aes(ymin=est.lb, ymax=est.ub), width=0.2, position = position_dodge(0.5)) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
   labs(title="Effect of Message on Support\nfor Ban on Subsidies",
-       x="Message Condition",
+       x="Country",
        y="Estimated Effect (95% CI)") +
   coord_flip() +
   theme_minimal() 
@@ -328,6 +337,27 @@ plotdf_Y1 = readRDS(here("results/res_farm_vim_bivariate.rds"))
 plotdf_Y2 = readRDS(here("results/res_sale_vim_bivariate.rds"))
 plotdf_Y3 = readRDS(here("results/res_subsidies_vim_bivariate.rds"))
 
+clean_df <- function(d){
+  d$X = gsub("_"," ",d$X) 
+  d$X = gsub("  "," ",d$X) 
+  d$X = gsub("Q1_","",d$X) 
+  d$X = gsub("Q2_","",d$X) 
+  d$X = gsub("Q4_","",d$X) 
+  d$X = gsub("Q6_","",d$X) 
+  d$X = gsub("Q5_","",d$X) 
+  d$X = gsub("COUNTRY","Country",d$X) 
+  d$X = gsub("dAGE","Age",d$X) 
+  d$X = gsub("dAGE","Age",d$X) 
+  d$X = gsub("URBANRURAL: ","Location: ",d$X) 
+  d$X = gsub("income_cat","Income",d$X) 
+  d$X =str_to_sentence(d$X)
+  return(d)
+}
+
+plotdf_Y1 = clean_df(plotdf_Y1)
+plotdf_Y2 = clean_df(plotdf_Y2)
+plotdf_Y3 = clean_df(plotdf_Y3)
+
 ggplot(plotdf_Y1, aes(x=X, y=est )) + geom_point() +
   geom_errorbar(aes(ymin=ci.lb, ymax=ci.ub), width=0.5) +
   geom_hline(yintercept=0, linetype="dashed", color="red") +
@@ -361,6 +391,11 @@ ggplot(plotdf_Y3, aes(x=X, y=est )) + geom_point() +
 res_ban_farming_unadj = readRDS(here("results/res_farming_unadj.rds"))
 res_ban_sale_unadj = readRDS(here("results/res_sale_unadj.rds"))
 res_ban_subsidies_unadj = readRDS(here("results/res_subsidies_unadj.rds"))
+
+res_ban_farming_unadj$Y = gsub("tr","",res_ban_farming_unadj$Y)
+res_ban_sale_unadj$Y = gsub("tr","",res_ban_sale_unadj$Y)
+res_ban_subsidies_unadj$Y = gsub("tr","",res_ban_subsidies_unadj$Y)
+
 
 ggplot(res_ban_farming_unadj, aes(x=Y, y=`Coef.`)) + geom_point() +
   geom_errorbar(aes(ymin=`2.5%`, ymax=`97.5%`), width=0.2) +
